V8Simple.h


enum class JSType
{
	Null,
	Int,
	Double,
	String,
	Bool,
	Object,
	Array,
	Function,
	External,
};
enum class JSRuntimeError
{
	NoError,
	InvalidCast,
	StringTooLong,
	TypeError,
};
struct JSContext;
struct JSValue;
struct JSString;
struct JSObject;
struct JSArray;
struct JSFunction;
struct JSExternal;
struct JSScriptException;
typedef JSValue* (StdCall *JSCallback)(JSContext* context, void* data, JSValue* const* args, int numArgs, JSValue** outError);
DllPublic JSType CDecl GetJSValueType(JSValue* value);
DllPublic void CDecl RetainJSValue(JSContext* context, JSValue* value);
DllPublic void CDecl ReleaseJSValue(JSContext* context, JSValue* value);
DllPublic int CDecl JSValueAsInt(JSValue* value, JSRuntimeError* outError);
DllPublic double CDecl JSValueAsDouble(JSValue* value, JSRuntimeError* outError);
DllPublic JSString* CDecl JSValueAsString(JSValue* value, JSRuntimeError* outError);
DllPublic bool CDecl JSValueAsBool(JSValue* value, JSRuntimeError* outError);
DllPublic JSObject* CDecl JSValueAsObject(JSValue* value, JSRuntimeError* outError);
DllPublic JSArray* CDecl JSValueAsArray(JSValue* value, JSRuntimeError* outError);
DllPublic JSFunction* CDecl JSValueAsFunction(JSValue* value, JSRuntimeError* outError);
DllPublic JSExternal* CDecl JSValueAsExternal(JSValue* value, JSRuntimeError* outError);
DllPublic bool CDecl JSValueStrictEquals(JSContext* context, JSValue* obj1, JSValue* obj2);
DllPublic JSValue* CDecl JSNull();
DllPublic JSValue* CDecl CreateJSInt(int value);
DllPublic JSValue* CDecl CreateJSDouble(double value);
DllPublic JSValue* CDecl CreateJSBool(bool value);
DllPublic JSObject* CDecl CreateExternalJSArrayBuffer(JSContext* context, void* data, int byteLength);
DllPublic JSFunction* CDecl CreateJSCallback(JSContext* context, void* data, JSCallback callback, JSScriptException** outError);
DllPublic JSString* CDecl CreateJSString(JSContext* context, const uint16_t* buffer, int length, JSRuntimeError* outError);
DllPublic int CDecl JSStringLength(JSContext* context, JSString* string);
DllPublic void CDecl WriteJSStringBuffer(JSContext* context, JSString* string, uint16_t* outBuffer);
DllPublic JSValue* CDecl JSStringAsValue(JSString* string);
DllPublic JSValue* CDecl CopyJSObjectProperty(JSContext* context, JSObject* obj, JSString* key, JSScriptException** outError);
DllPublic void CDecl SetJSObjectProperty(JSContext* context, JSObject* obj, JSString* key, JSValue* value, JSScriptException** outError);
DllPublic JSArray* CDecl CopyJSObjectOwnPropertyNames(JSContext* context, JSObject* obj, JSScriptException** outError);
DllPublic bool CDecl JSObjectHasProperty(JSContext* context, JSObject* obj, JSString* key, JSScriptException** outError);
DllPublic void* CDecl GetJSObjectArrayBufferData(JSContext* context, JSObject* obj, JSRuntimeError* outError);
DllPublic JSValue* CDecl JSObjectAsValue(JSObject* obj);
DllPublic JSValue* CDecl CopyJSArrayPropertyAtIndex(JSContext* context, JSArray* arr, int index, JSScriptException** outError);
DllPublic void CDecl SetJSArrayPropertyAtIndex(JSContext* context, JSArray* arr, int index, JSValue* value, JSScriptException** outError);
DllPublic int CDecl JSArrayLength(JSContext* context, JSArray* arr);
DllPublic JSValue* CDecl JSArrayAsValue(JSArray* arr);
DllPublic JSValue* CDecl CallJSFunctionCreate(JSContext* context, JSFunction* function, JSObject* thisObject, JSValue* const* args, int numArgs, JSScriptException** outError);
DllPublic JSObject* CDecl ConstructJSFunctionCreate(JSContext* context, JSFunction* function, JSValue* const* args, int numArgs, JSScriptException** outError);
DllPublic JSValue* CDecl JSFunctionAsValue(JSFunction* fun);
DllPublic JSExternal* CDecl CreateJSExternal(JSContext* context, void* value);
DllPublic void* CDecl GetJSExternalValue(JSContext* context, JSExternal* external);
DllPublic JSValue* CDecl JSExternalAsValue(JSExternal* external);
DllPublic void CDecl RetainJSScriptException(JSContext* context, JSScriptException* e);
DllPublic void CDecl ReleaseJSScriptException(JSContext* context, JSScriptException* e);
DllPublic JSValue* CDecl GetJSScriptException(JSScriptException* e);
DllPublic JSString* CDecl GetJSScriptExceptionMessage(JSScriptException* e);
DllPublic JSString* CDecl GetJSScriptExceptionFileName(JSScriptException* e);
DllPublic int CDecl GetJSScriptExceptionLineNumber(JSScriptException* e);
DllPublic JSString* CDecl GetJSScriptExceptionStackTrace(JSScriptException* e);
DllPublic JSString* CDecl GetJSScriptExceptionSourceLine(JSScriptException* e);